# eva

./: README.md  README.rst  mypy.ini  noxfile.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml  main.yml  tests.yml
evaluation_selection/: data.py  nested.py  pipeline.py  train.py  train_nested.py
tests/: test_evaluation_selection.py  test_train.py  test_train_nested.py
