[tool.poetry]
name = "evaluation-selection"
version = "0.1.0"
description = ""
authors = ["gvjas <gvjasch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
