[tool.poetry]
name = "evaluation-selection"
version = "0.1.0"
description = "homework for RS School Machine Learning course"
authors = ["gvjas <gvjasch@gmail.com>"]

[tool.poetry.scripts]
train = "evaluation_selection.train:train"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
pandas = "^1.4.2"
black = "^22.3.0"
mypy = "^0.950"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
